--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -21,9 +21,7 @@
 
 option(CLANG_TIME_TRACE "Enable clang profiling." OFF)
 
-option(SRCML_BUILD_PCH "Use PCH (PreCompiled Headers" ON)
-
-option(SRCML_BUILD_UNITY "Use a unity build" ON)
+option(SRCML_BUILD_PCH "Use PCH (PreCompiled Headers" OFF)
 
 include_directories(${CMAKE_SOURCE_DIR}/src/libsrcml)
 
