Add UNITY_BUILD to Test action

--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -47,14 +47,14 @@ jobs:
         working-directory: build
         run: |
           export UseMultiToolTask=true
-          cmake ..
+          cmake .. -DCMAKE_UNITY_BUILD=ON
 
       - name: CMake Setup on Ubuntu/macOS
         shell: bash
         if: ${{ matrix.os != 'windows-latest' }}
         working-directory: build
         run: |
-          cmake .. -G Ninja
+          cmake .. -G Ninja -DCMAKE_UNITY_BUILD=ON
 
       - name: Build
         shell: bash
