Add post-install code to run ldconfig on Ubuntu for local install

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -132,3 +132,9 @@ if(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
         set_target_properties(libsrcml_shared PROPERTIES LINK_FLAGS_RELEASE -s)
     endif()
 endif()
+
+# Run ldconfig for install (not cpack) on Ubuntu
+if(DISTRO AND DISTRO MATCHES "Ubuntu")
+    install(CODE "message(STATUS \"Running: ldconfig\")")
+    install(CODE "execute_process(COMMAND ldconfig)")
+endif()
