Hide indirect library dependencies from client

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -63,9 +63,9 @@ endif()
 
 # Add coverage to default part of Debug
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
-    target_link_libraries(srcml libsrcml_link ${SRCML_LIBRARIES} gcov)
+    target_link_libraries(srcml PRIVATE libsrcml_link ${SRCML_LIBRARIES} gcov)
 else()
-    target_link_libraries(srcml libsrcml_link ${SRCML_LIBRARIES})
+    target_link_libraries(srcml PRIVATE libsrcml_link ${SRCML_LIBRARIES})
 endif()
 
 if(MSVC)
