Add linker flag to srcml to remove unused dependencies

--- a/src/client/CMakeLists.txt
+++ b/src/client/CMakeLists.txt
@@ -81,7 +81,7 @@ elseif(WIN32)
     # @BUILD Why this when there is a MSVC case above?
     set_target_properties(srcml PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin LINK_FLAGS "-Wl,--allow-multiple-definition")
 else()
-    set_target_properties(srcml PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
+    set_target_properties(srcml PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin LINK_FLAGS "-Wl,--as-needed")
 endif()
 
 # add Info.plist
