--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -60,7 +60,11 @@ if(WIN32)
     target_compile_options(libsrcml_shared PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${Boost_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${ANTLR_INCLUDE_DIR})
 endif()
-target_link_libraries(libsrcml_shared PRIVATE ${LIBSRCML_LIBRARIES})
+if(MSVC)
+    target_link_libraries(libsrcml_shared PUBLIC ${LIBSRCML_LIBRARIES})
+else()
+    target_link_libraries(libsrcml_shared PRIVATE ${LIBSRCML_LIBRARIES})
+endif()
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(libsrcml_shared PRIVATE gcov)
 endif()
