--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -24,7 +24,7 @@ jobs:
         working-directory: build
         run: |
           export UseMultiToolTask=true
-          cmake .. -DCMAKE_UNITY_BUILD=ON
+          cmake .. -DCMAKE_UNITY_BUILD=ON -DSRCML_BUILD_PCH=ON
 
       - name: Build
         shell: bash
