--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -13,7 +13,15 @@ jobs:
 
       - uses: microsoft/setup-msbuild@v1
 
+      - name: Cache Build
+        id: cache
+        uses: actions/cache@v2
+        with:
+          path: build
+          key: windows-package
+
       - shell: bash
+        if: ${{ !steps.cache.outputs.cache-hit }}
         run: mkdir build
 
       - name: Build
