Refactor cmake for custom command on running ANTLR

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -37,21 +37,20 @@ file(GLOB PARSER_SOURCE *.hpp *.cpp)
 macro(RunAntlr OUTPUT_FILES INPUT_FILES DEPENDENCIES INCLUDE_GRAMMAR)
 
     if("${INCLUDE_GRAMMAR}" STREQUAL "")
-        # Handling windows relative path problem (Not sure why this is an issue but it's given me a headache).
-        add_custom_command(OUTPUT  ${OUTPUT_FILES}
-            DEPENDS ${INPUT_FILES} ${DEPENDENCIES}
-            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-            COMMAND ${ANTLR_EXE} -o \"${CMAKE_GENERATED_SOURCE_DIR}\" ${INPUT_FILES}
-            COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT_FILES}
-        )
+        set(GLIB "")
+        set(GLIBINCLUDE "")
     else()
-        add_custom_command(OUTPUT  ${OUTPUT_FILES}
-            DEPENDS ${INPUT_FILES} ${DEPENDENCIES}
-            WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-            COMMAND ${ANTLR_EXE} -o \"${CMAKE_GENERATED_SOURCE_DIR}\" -glib \"${INCLUDE_GRAMMAR}\" ${INPUT_FILES}
-            COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT_FILES}
-        )
+        set(GLIB -glib)
+        set(GLIBINCLUDE "${INCLUDE_GRAMMAR}")
     endif()
+
+    add_custom_command(OUTPUT  ${OUTPUT_FILES}
+        DEPENDS ${INPUT_FILES} ${DEPENDENCIES}
+        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
+        COMMAND ${ANTLR_EXE} -o ${CMAKE_GENERATED_SOURCE_DIR} ${GLIB} ${GLIBINCLUDE} ${INPUT_FILES}
+        COMMAND ${CMAKE_COMMAND} -E touch ${OUTPUT_FILES}
+        VERBATIM
+    )
 endmacro(RunAntlr)
 
 macro(lexerFiles LEXER)
