Change action build to use vcpkg

--- a/.github/workflows/BuildWindows.yml
+++ b/.github/workflows/BuildWindows.yml
@@ -6,30 +6,192 @@ on: workflow_dispatch
 jobs:
   build:
     runs-on: windows-latest
-    timeout-minutes: 10
+    timeout-minutes: 60
     steps:
 
-      - uses: actions/checkout@v2
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-      - uses: microsoft/setup-msbuild@v1
+      - name: Setup Windows
+        uses: microsoft/setup-msbuild@v1.1
 
-      - name: Cache Build
-        id: cache
-        uses: actions/cache@v2
+      - name: Restore artifacts, or run vcpkg, build (and cache artifacts as post step)
+        uses: lukka/run-vcpkg@v10.3
+        id: runvcpkg
         with:
-          path: build
-          key: windows-package
+          vcpkgGitCommitId: 'acc3bcf76b84ae5041c86ab55fe138ae7b8255c7'
+          runVcpkgInstall: true
 
-      - shell: bash
-        if: ${{ !steps.cache.outputs.cache-hit }}
-        run: mkdir build
+      - name: Setup devcmd to use cl.exe
+        uses: ilammy/msvc-dev-cmd@v1
+
+      - name: Create build directory
+        shell: bash
+        run: |
+          cmake --version
+          mkdir build
+          $VCPKG_ROOT/vcpkg list
+
+      - name: CMake Setup on Windows
+        shell: bash
+        working-directory: build
+        run: |
+          export UseMultiToolTask=true
+          cmake .. -DCMAKE_TOOLCHAIN_FILE=$VCPKG_ROOT/scripts/buildsystems/vcpkg.cmake -DCMAKE_CXX_COMPILER=cl -DCMAKE_C_COMPILER=cl -DCMAKE_VERBOSE_MAKEFILE=ON
 
       - name: Build
         shell: bash
         working-directory: build
         continue-on-error: true
         run: |
-          export EXTERNAL_INCLUDE="C:\Program Files (x86)\Windows Kits\10\Include;C:\Program Files (x86)\Microsoft Visual Studio\2019\Enterprise\VC\Tools\MSVC\14.29.30037\include"
           export UseMultiToolTask=true
-          cmake .. -DBUILD_LIBSRCML_TESTS=OFF
-          cmake --build . --verbose --config Release
+          cmake --build . --config Release
+
+      - name: Package
+        working-directory: build
+        continue-on-error: true
+        run: |
+          cpack -V
+      - uses: actions/upload-artifact@v3
+        with:
+          name: wix.log
+          path: build/dist/_CPack_Packages/win64/WIX/wix.log
+      - uses: actions/upload-artifact@v3
+        with:
+          name: Installers
+          path: build/dist/*.msi
+      - uses: actions/upload-artifact@v3
+        with:
+          name: CPack
+          path: build/dist/_CPack_Packages/
+
+      - name: Install package
+        working-directory: build/dist
+        continue-on-error: true
+        run: msiexec /i D:\a\srcML\srcML\build\dist\srcml-1.0.0-windows-x86_64.msi /quiet /norestart /L*vx .\msi.log
+      - uses: actions/upload-artifact@v3
+        with:
+          name: msi.log
+          path: build/dist/msi.log
+
+      - name: Clean build
+        working-directory: build
+        continue-on-error: true
+        run: |
+          cmake --build . --config Release --target clean
+          cmake . -DSRCML_TEST_INSTALLED=ON
+
+      - name: Set PATH for Windows
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          echo "/c/Program Files/srcML/bin" >> $GITHUB_PATH
+
+      - name: Run Installed srcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          EOL="\r\n"
+          export PATH=$PATH:"/c/Program Files/srcML/bin"
+          SRCML_HOME="/c/Program Files/srcML/bin"
+          ls -lh "$SRCML_HOME"
+          SRCML="$SRCML_HOME/srcml.exe"
+          ls -lh "$SRCML"
+          export MSYS2_ARG_CONV_EXCL="*"
+          diff='diff -Z '
+          "$SRCML" --version
+          "$SRCML" --text="int a;" -l C++
+          touch "a.cpp"
+          "$SRCML" a.cpp
+          echo "a;" >> a.cpp
+          "$SRCML" a.cpp
+          echo "b;" >> b.cpp
+          "$SRCML" a.cpp b.cpp
+
+      - name: Setup msys2 with additional client-test packages for Windows
+        uses: msys2/setup-msys2@v2
+        continue-on-error: true
+        with:
+          install: >-
+            zip
+            cpio
+            diffutils
+            util-linux
+            cmake
+            libxml2
+
+      - name: Windows Client Tests on Installed srcml
+        shell: msys2 {0}
+        working-directory: build
+        timeout-minutes: 10
+        continue-on-error: true
+        run: |
+          export SRCML_HOME="/c/Program Files/srcML/bin/"
+          ctest -C Release -VV
+
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ClientTest.windows-latest.log
+          path: build/Testing/Temporary/LastTest.log
+
+      - name: Build libsrcml Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          export UseMultiToolTask=true
+          export PATH=$PATH:"/c/Program Files/srcML/bin/"
+          echo "C:\Program Files\srcML\bin" >> $GITHUB_PATH
+          SRCML_HOME="/c/Program Files/srcML/bin/"
+          cmake . -DBUILD_LIBSRCML_TESTS=ON
+          cmake --build . --config Release --target build_libsrcml_tests
+
+      - name: Check dependents
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          dumpbin -dependents "/c/Program Files/srcML/bin/srcml.exe" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/archive.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/libcurl.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/libsrcml.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/libxml2.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/libexslt.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/libxslt.dll" || true
+          dumpbin -dependents "/c/Program Files/srcML/bin/iconv-2.dll" || true
+          dumpbin -exports "/c/Program Files/srcML/bin/libsrcml.dll" || true
+
+      - name: Run libsrcml Tests on Installed libsrcml
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          ctest -C Release -R ^test_
+      - uses: actions/upload-artifact@v3
+        with:
+          name: libsrcmlTest.windows-latest.log
+          path: build/Testing/Temporary/LastTest.log
+
+      - name: Generate Parser Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          export PATH=$PATH:"/c/Program Files/srcML/bin/"
+          ls -lh "/c/Program Files/srcML/bin/"
+          echo "C:\Program Files\srcML\bin" >> $GITHUB_PATH
+          cmake . -DBUILD_PARSER_TESTS=ON
+          cmake --build . --config Release --target gen_parser_tests
+
+      - name: Run Parser Tests
+        shell: bash
+        working-directory: build
+        continue-on-error: true
+        run: |
+          srcml --parser-test test/parser/testsuite | tee ParserTest.log
+      - uses: actions/upload-artifact@v3
+        with:
+          name: ParserTest.windows-latest.log
+          path: build/ParserTest.log
