Remove any dlsym() loading of libxslt or libexslt

--- a/src/libsrcml/CMakeLists.txt
+++ b/src/libsrcml/CMakeLists.txt
@@ -51,7 +51,7 @@ endif()
 add_library(libsrcml_static STATIC $<TARGET_OBJECTS:parser> $<TARGET_OBJECTS:antlr> $<TARGET_OBJECTS:libsrcml>)
 set_target_properties(libsrcml_static PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 target_include_directories(libsrcml_static BEFORE PRIVATE . ${CMAKE_SOURCE_DIR}/src/parser)
-target_link_libraries(libsrcml_static PRIVATE ${LIBSRCML_LIBRARIES})
+target_link_libraries(libsrcml_static PRIVATE ${LIBSRCML_LIBRARIES} LibXslt::LibXslt LibXslt::LibExslt)
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(libsrcml_static PRIVATE gcov)
 endif()
@@ -64,7 +64,7 @@ if(WIN32)
     target_compile_options(libsrcml_shared PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${Boost_INCLUDE_DIR})
     target_compile_options(parser PRIVATE ${CMAKE_INCLUDE_SYSTEM_FLAG_CXX}${ANTLR_INCLUDE_DIR})
 endif()
-target_link_libraries(libsrcml_shared PUBLIC ${LIBSRCML_LIBRARIES})
+target_link_libraries(libsrcml_shared PUBLIC ${LIBSRCML_LIBRARIES} LibXslt::LibXslt LibXslt::LibExslt)
 if(CMAKE_BUILD_TYPE STREQUAL "Debug" AND CMAKE_COMPILER_IS_GNUCXX)
     target_link_libraries(libsrcml_shared PRIVATE gcov)
 endif()
