Remove use of boost

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -123,7 +123,6 @@ find_package(LibArchive 3 REQUIRED)
 find_package(LibXml2 REQUIRED)
 find_package(CURL REQUIRED)
 find_package(Iconv REQUIRED)
-find_package(Boost REQUIRED)
 find_package(LibXslt REQUIRED)
 
 # Setup ANTLR 2.7 library
@@ -157,8 +156,8 @@ set(LIBXML2_LIBRARIES ${LIBXML2_LIBRARIES} ${Iconv_LIBRARIES})
 
 if(NOT WIN32)
     include_directories(SYSTEM ${LibArchive_INCLUDE_DIRS} ${LIBXML2_INCLUDE_DIRS} ${CURL_INCLUDE_DIRS}
-                    ${Boost_INCLUDE_DIRS} ${Iconv_INCLUDE_DIRS} ${LibArchive_INCLUDE_DIR}
-                    ${LIBXML2_INCLUDE_DIR} ${CURL_INCLUDE_DIR} ${Boost_INCLUDE_DIR} ${ANTLR_INCLUDE_DIR})
+                    ${Iconv_INCLUDE_DIRS} ${LibArchive_INCLUDE_DIR}
+                    ${LIBXML2_INCLUDE_DIR} ${CURL_INCLUDE_DIR} ${ANTLR_INCLUDE_DIR})
 endif()
 
 get_property(dirs DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY INCLUDE_DIRECTORIES)
