Improve Windows build and installer generation

--- a/package/CMakeLists.txt
+++ b/package/CMakeLists.txt
@@ -22,33 +22,6 @@
 # Client component, SRCML, is just one component so it appears as on item
 # for installers that let you pick what to install
 # Development group, SRCMLDEV, is composed of multiple components
-include(CPackComponent)
-cpack_add_component(SRCML
-                    DISPLAY_NAME "srcml"
-                    DESCRIPTION "srcml cli program with required library"
-                    REQUIRED)
-
-cpack_add_component_group(SRCMLDEV
-                    DISPLAY_NAME "Development"
-                    DESCRIPTION "Include file, static library, and examples for developing C++ programs with libsrcml")
-
-cpack_add_component(INCLUDE
-                    DISPLAY_NAME "srcml.h"
-                    DESCRIPTION "Include file, srcml.h"
-                    DISABLED
-                    GROUP SRCMLDEV)
-
-cpack_add_component(DEVLIBS
-                    DISPLAY_NAME "libsrcml.a"
-                    DESCRIPTION "Development libraries, i.e.., static library"
-                    DISABLED
-                    GROUP SRCMLDEV)
-
-cpack_add_component(EXAMPLES
-                    DISPLAY_NAME "libsrcml examples"
-                    DESCRIPTION "Include file, srcml.h"
-                    DISABLED
-                    GROUP SRCMLDEV)
 
 # especially for archives
 set(CPACK_COMPONENTS_GROUPING "ONE_PER_GROUP")
@@ -67,8 +40,8 @@ set(CPACK_PACKAGE_EXECUTABLES srcml;srcML)
 set(CPACK_CREATE_DESKTOP_LINKS "${CPACK_PACKAGE_NAME}")
 
 # Generator settings
-if(CMAKE_SYSTEM_NAME MATCHES "Windows")
-    set(CPACK_PACKAGE_FILE_NAME "srcML-Win")
+if(WIN32)
+    set(CPACK_GENERATOR "WIX;ZIP")
 elseif(APPLE)
     set(CPACK_GENERATOR "productbuild;TGZ;TBZ2")
 else()
@@ -107,13 +80,50 @@ set(CPACK_RESOURCE_FILE_README ${CMAKE_SOURCE_DIR}/README.md)
 set(CPACK_RESOURCE_FILE_WELCOME ${CMAKE_SOURCE_DIR}/package/welcome.html)
 
 # strip executables
-#set(CPACK_STRIP_FILES ON)
+set(CPACK_STRIP_FILES ON)
  
+# output directory
+set(CPACK_PACKAGE_DIRECTORY ${CMAKE_BINARY_DIR}/dist)
+
 # output directory
 set(CPACK_PACKAGE_DIRECTORY ${CMAKE_BINARY_DIR}/dist)
 
 # Generate user and development tar.gz's
 set(CPACK_ARCHIVE_COMPONENT_INSTALL ON)
+
+if(NOT MSVC)
+    # Client component, SRCML, is just one component so it appears as on item
+    # for installers that let you pick what to install
+    # Development group, SRCMLDEV, is composed of multiple components
+    include(CPackComponent)
+    cpack_add_component(SRCML
+                        DISPLAY_NAME "srcml"
+                        DESCRIPTION "srcml cli program with required library"
+                        REQUIRED)
+
+    cpack_add_component_group(SRCMLDEV
+                        DISPLAY_NAME "Development"
+                        DESCRIPTION "Include file, static library, and examples for developing C++ programs with libsrcml")
+
+    cpack_add_component(INCLUDE
+                        DISPLAY_NAME "srcml.h"
+                        DESCRIPTION "Include file, srcml.h"
+                        DISABLED
+                        GROUP SRCMLDEV)
+
+    cpack_add_component(DEVLIBS
+                        DISPLAY_NAME "libsrcml.a"
+                        DESCRIPTION "Development libraries, i.e.., static library"
+                        DISABLED
+                        GROUP SRCMLDEV)
+
+    cpack_add_component(EXAMPLES
+                        DISPLAY_NAME "libsrcml examples"
+                        DESCRIPTION "Include file, srcml.h"
+                        DISABLED
+                        GROUP SRCMLDEV)
+
+endif()
 
 # specific configurations
 if (CPACK_GENERATOR MATCHES "RPM")
